--- a/.github/workflows/try-in-web-ide.yaml
+++ b/.github/workflows/try-in-web-ide.yaml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Eclipse Che Pull Request Link
         id: che-pr-check-gh-action
-        uses: redhat-actions/try-in-web-ide@v1
+        uses: dkwon17/try-in-web-ide@earliestMatch
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           add_comment: true
