--- a/.github/workflows/try-in-web-ide.yaml
+++ b/.github/workflows/try-in-web-ide.yaml
@@ -14,6 +14,7 @@ jobs:
         id: che-pr-check-gh-action
         uses: dkwon17/try-in-web-ide@testing
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           add_comment: true
           add_status: true
           web_ide_instance: https://workspaces.openshift.com
